make small corrections in privacy and apps index

--- a/apps/index.html
+++ b/apps/index.html
@@ -19,8 +19,8 @@
         <p>Check out my latest Android projects.</p>
 
         <div style="margin-top: 2rem; border: 1px solid #333; padding: 20px; border-radius: 8px;">
-            <h3>Your App Name</h3>
-            <p>A short description of what this app does.</p>
+            <h3>Vocal Pitch Detector</h3>
+            <p>Visualize pitch of sung note on a graph</p>
             <a href="vocal-pitch-detector/vocal-pitch-detector.html" class="btn">View Details</a>
         </div>
     </main>
