--- a/apps/vocal-pitch-detector/privacy.html
+++ b/apps/vocal-pitch-detector/privacy.html
@@ -18,7 +18,7 @@
         <h2>Privacy Policy for Vocal Pitch Detector</h2>
         <p><strong>Last updated: February 3, 2026</strong></p>
         
-        <p>This Privacy Policy specifically governs the <strong>Vocal Pitch Detector</strong> Android application developed by <strong>jsaiborne</strong>. This policy explains how data is handled locally on your device and the role of third-party advertising services.</p>
+        <p>This Privacy Policy specifically governs the <strong>Vocal Pitch Detector</strong> Android application developed by <strong>Jotham Saiborne</strong>. This policy explains how data is handled locally on your device and the role of third-party advertising services.</p>
 
         <h3>1. No Personal Data Collection</h3>
         <p>Vocal Pitch Detector is designed with privacy as a priority. We do not collect, transmit, or store any personal identity information on any external servers.</p>
@@ -49,7 +49,7 @@
         <p>Since we do not collect your data, we do not "retain" it. Any files you save using the App remain on your device until you manually delete them or uninstall the App.</p>
 
         <h3>5. Contact</h3>
-        <p>If you have questions regarding this specific policy for the Vocal Pitch Detector, please contact me at: <strong>[Your Email Address Here]</strong></p>
+        <p>If you have questions regarding this specific policy for the Vocal Pitch Detector, please contact me at: <strong>jsaiborne@gmail.com</strong></p>
 
     </main>
 
