--- a/apps/vocal-pitch-detector/privacy.html
+++ b/apps/vocal-pitch-detector/privacy.html
@@ -49,7 +49,7 @@
         <p>Since we do not collect your data, we do not "retain" it. Any files you save using the App remain on your device until you manually delete them or uninstall the App.</p>
 
         <h3>5. Contact</h3>
-        <p>If you have questions regarding this specific policy for the Vocal Pitch Detector, please contact me at: <strong>jsaiborne@gmail.com</strong></p>
+        <p>If you have questions regarding this specific policy for the Vocal Pitch Detector, please contact me at: <strong>bahehdowski@gmail.com</strong></p>
 
     </main>
 
